# idl2cpp

./: .gitignore  CMakeLists.txt
include/: attribute.hxx  message.hxx  parser.hxx  strutil.hxx  type.hxx
src/: attribute.cxx  main.cxx  message.cxx  parser.cxx  strutil.cxx  type.cxx
